--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Killian Escobedo
+
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Killian Escobedo</title>
+</head>
+<body>
+<p>I live in San Francisco, CA</p>
+<p>My favorite pizza toppings are:</p>
+<ul>
+	<li>pineapple</li>
+	<li>onions</li>
+	<li>pepperoni</li>
+</ul>
+</body>
+</html>
