--- a/cookie-recipe/cookie-recipe.html
+++ b/cookie-recipe/cookie-recipe.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Cookies recipe</title>
 </head>
 <body>
 <h1>The Best Chocolate Chip Cookies</h1>
