changes to headers

--- a/cookie-recipe/cookie-recipe.html
+++ b/cookie-recipe/cookie-recipe.html
@@ -6,12 +6,12 @@
 <body>
 <h1>The Best Chocolate Chip Cookies</h1>
 
-<img src="cookies.jpg" />
+<img src="cookies.jpg" alt="Mouth watering cooking close-up" />
 
 <h3>Recipe by: Bonnie Owens</h3>
 
 
-<p>RELATED RECIPES</p> 
+<h4>RELATED RECIPES</h4> 
 <ul>
 	<li>Amazing Chocolate Chip Cookies!</li>
 	<li>Beer and Pretzel Chocolate Chip Cookies</li>
