Adding blcokquote tag

--- a/cookie-recipe/cookie-recipe.html
+++ b/cookie-recipe/cookie-recipe.html
@@ -30,7 +30,7 @@
 <h2>SERVINGS</h2>
 <p>A LOT</p>
 
-<h2>INGREDIENTS</h2>
+<h2>INGREDIENTS</h2>	
 	<ul>
 		<li>1 1/2 cup (3 sticks) butter, softened</li>
 		<li>1 cup brown sugar</li>
@@ -60,10 +60,10 @@
 
 <h2>EXPERT TIPS</h2>
 
-<ul style="list-style: none;" >
-	<li>Use an ice-cream scoop to make perfectly shaped cookies. Level off the dough on the edge of the bowl for perfectly round cookies.If you didn't think these cookies could get any better, think again! Get creative! Instead of the 2 cups semisweet chocolate chips, make with 1/2 cup each of semisweet chocolate chips, peanut butter chips, or butterscotch chips. OMG these are good!
-	</li> 
-</ul>
+
+	<blockquote>Use an ice-cream scoop to make perfectly shaped cookies. Level off the dough on the edge of the bowl for perfectly round cookies.If you didn't think these cookies could get any better, think again! Get creative! Instead of the 2 cups semisweet chocolate chips, make with 1/2 cup each of semisweet chocolate chips, peanut butter chips, or butterscotch chips. OMG these are good!
+	</blockquote> 
+
 
 <p>Got questions? Our experts have the answers. <a href="mailto:me@fakeemail.com" > Email Me</a>
 </p>
