Final edits before submission

--- a/cookie-recipe/cookie-recipe.html
+++ b/cookie-recipe/cookie-recipe.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
+
 <html>
 <head>
-	<title>Chocolate chip cookie recipe</title>
+	<title>Chocolate chip cookie recipe</title>s
+	<meta charset="utf-8">
 </head>
 <body>
 <h1>The Best Chocolate Chip Cookies</h1>
 
 <img src="cookies.jpg" alt="Mouth watering cooking close-up" />
 
-<h3>Recipe by: Bonnie Owens</h3>
+<p><strong>Recipe by: Bonnie Owens</strong></p>
 
 
 <h4>RELATED RECIPES</h4> 
@@ -46,7 +48,7 @@
 		<li>1 cup chopped walnuts or pecans(optional)</li>
 	</ul>
 
-<h2>How to make Mama&#8217;s Recipe: The Best Chocolate Chip Cookies</h2>
+<h2>How to make Mama's Recipe: The Best Chocolate Chip Cookies</h2>
 <ol>
 	<li>Preheat oven to 350 degrees</li>
 	<li>Beat butter and sugars together until light and fluffy</li>
