--- a/cookie-recipe/cookie-recipe.html
+++ b/cookie-recipe/cookie-recipe.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>Chocolate chip cookie recipe</title>s
+	<title>Chocolate chip cookie recipe</title>
 	<meta charset="utf-8">
 </head>
 <body>
