Lotsa work since last thursday’s class

--- a/travel-news/travel-news.html
+++ b/travel-news/travel-news.html
@@ -38,8 +38,8 @@
 	</li>
 </ul>
 
-<ul>
-	<li>
+<ul class="sponsored-articles">
+	<li class="thailand">
 		<h2>
 			<a href="#">Next Stop: 'Old Thailand' Found on Sleepy Islands</a>
 		</h2>
