--- a/resume/resume-ke.html
+++ b/resume/resume-ke.html
@@ -7,38 +7,72 @@
 </head>
 <body>
 
-	<p>Killian Escobedo</p>
+<header>
+	<p class="title">Killian Escobedo</p>
 
 	<ul>
-		<li>About me</li>
-		<li>Resume</li>
+		<li><a href="about-me.html">About me</a></li>
+		<li><a href="#">Resume</a></li>
 	</ul>
+</header>
+
+<main>
+
 
 	<h1>Resume</h1>
-	
-	<h2>Experience</h2>
+	<div class="experience">
+		<h2>Experience</h2>
 
-	<h3>Practice Fusion | Senior UX designer | June 2012 - Present</h3>
-	<ul>
-		<li>Designed and delivered mockups of revenue-generating features for an Electronic Health Records system used by over 100,000 users.</li>
+			<h3>Practice Fusion | Senior UX designer | June 2012 - Present</h3>
+			<ul>
+				<li>Designed and delivered mockups of revenue-generating features for an Electronic Health Records system used by over 100,000 users.</li>
 		
-		<li>Embedded with multiple agile teams to groom and implement product features under tight deadlines.</li>
+				<li>Embedded with multiple agile teams to groom and implement product features under tight deadlines.</li>
 
-		<li>Collaborated with research team, user panels, and clinical experts to develop and optimize workflows for physicians, nurses, and practice staff.</li>
+				<li>Collaborated with research team, user panels, and clinical experts to develop and optimize workflows for physicians, nurses, and practice staff.</li>
 
-		<li>Established design team best practices for working with leadership, product management, engineering, marketing, and business development.</li>
+				<li>Established design team best practices for working with leadership, product management, engineering, marketing, and business development.</li>
 
-		<li>Contribute to design team style guide, pattern library, and copy guidelines.</li>
-	</ul>
+				<li>Contribute to design team style guide, pattern library, and copy guidelines.</li>
+			</ul>
 
-	<h3>Smithsonian Institution Archives | Intern | May 2011 - July 2011</h3>
+			<h3>Smithsonian Institution Archives | Intern | May 2011 - July 2011</h3>
 
-	<ul>
-		<li>Researched digital video preservation standards and provided recommendations on how to preserve digital video and multimedia content accessioned into the archive.</li>
+			<ul>
+				<li>Researched digital video preservation standards and provided recommendations on how to preserve digital video and multimedia content accessioned into the archive.</li>
 
-		<li>Conducted exploratory data analysis on over 10,000 multimedia files to identify file type and characteristics affecting long-term preservation of files.</li>
-	</ul>
+				<li>Conducted exploratory data analysis on over 10,000 multimedia files to identify file type and characteristics affecting long-term preservation of files.</li>
+			</ul>
 
+			<h3>Wendel Rosen Black and Dean | Paralegal | January 2006 - August 2010</h3>
+
+				<ul>
+					<li>Managed database and software tools used for organizing evidence in complex litigation cases</li>
+					<li>Assisted attorneys, paralegals and IT team in developing strategies for managing large electronic document repositories</li>
+					<li>Proposed and executed protocols for compiling metadata for electronic documents and scanned images for identification and retrieval purposes</li>
+				</ul>
+	</div>
+
+	<div class="education">
+		<h2>Education</h2>
+
+		<h3>University of Michigan - Ann Arbor</h3>
+		<p>Master of Science in Information - Human-Computer Interaction</p>
+
+		<h3>University of California - Santa Cruz</h3>
+		<p>Bachelor of Arts - Film and Digital Media</p>
+		<p>Bachelor of Arts - History</p>
+	</div>
+
+	<div class="contact">
+		<ul>
+			<li>killian.escobedo@gmail.com</li>	
+			<li>707.953.5057</li>
+			<li>www.killianescobedo.com</li>	
+		</ul>
+	</div>
+
+</main>
 
 
 </body>
