--- a/resume/resume-ke.html
+++ b/resume/resume-ke.html
@@ -20,10 +20,11 @@
 
 
 	<h1>Resume</h1>
+
 	<div class="experience">
 		<h2>Experience</h2>
 
-			<h3>Practice Fusion | Senior UX designer | June 2012 - Present</h3>
+			<h3>Practice Fusion | <span class="role-format">Senior UX designer </span> | <span class="date-format">June 2012 - Present</span></h3>
 			<ul>
 				<li>Designed and delivered mockups of revenue-generating features for an Electronic Health Records system used by over 100,000 users.</li>
 		
@@ -36,7 +37,7 @@
 				<li>Contribute to design team style guide, pattern library, and copy guidelines.</li>
 			</ul>
 
-			<h3>Smithsonian Institution Archives | Intern | May 2011 - July 2011</h3>
+			<h3>Smithsonian Institution Archives |  <span class="role-format">Intern</span> | <span class="date-format">May 2011 - July 2011</span></h3>
 
 			<ul>
 				<li>Researched digital video preservation standards and provided recommendations on how to preserve digital video and multimedia content accessioned into the archive.</li>
@@ -44,7 +45,7 @@
 				<li>Conducted exploratory data analysis on over 10,000 multimedia files to identify file type and characteristics affecting long-term preservation of files.</li>
 			</ul>
 
-			<h3>Wendel Rosen Black and Dean | Paralegal | January 2006 - August 2010</h3>
+			<h3>Wendel Rosen Black and Dean | <span class="role-format">Paralegal</span> | <span class="date-format"> January 2006 - August 2010</span></h3>
 
 				<ul>
 					<li>Managed database and software tools used for organizing evidence in complex litigation cases</li>
@@ -53,27 +54,50 @@
 				</ul>
 	</div>
 
+	<div class="skills">
+		<h2>Skills</h2>
+		<h3>Programming</h3>
+		<ul>
+			<li>html/css</li>
+			<li>Javascript</li>
+		</ul>
+
+		<h3>UX methods</h3>
+		<ul>
+			<li>Prototyping</li>
+			<li>Personas/scenarios</li>
+			<li>User journeys</li>
+			<li>Wireframing</li>
+			<li>High fidelity mockups</li>
+		</ul>
+	</div>
+
+
 	<div class="education">
 		<h2>Education</h2>
 
 		<h3>University of Michigan - Ann Arbor</h3>
-		<p>Master of Science in Information - Human-Computer Interaction</p>
+		<ul>
+			<li>Master of Science in Information - Human-Computer Interaction</li>
+		</ul>
 
 		<h3>University of California - Santa Cruz</h3>
-		<p>Bachelor of Arts - Film and Digital Media</p>
-		<p>Bachelor of Arts - History</p>
-	</div>
-
-	<div class="contact">
 		<ul>
-			<li>killian.escobedo@gmail.com</li>	
-			<li>707.953.5057</li>
-			<li>www.killianescobedo.com</li>	
+			<li>Bachelor of Arts - Film and Digital Media</li>
+			<li>Bachelor of Arts - History</li>
 		</ul>
 	</div>
-
 </main>
 
+<footer>
+	<div class="social-links">
+		<ul>
+			<li><a href="#">LinkedIn</a></li>
+			<li><a href="#">Instagram</a></li>
+			<li><a href="#">facebook</a></li>
+		</ul>
+	</div>
+</footer>
 
 </body>
 </html>
