--- a/resume/about-me.html
+++ b/resume/about-me.html
@@ -16,11 +16,14 @@
 	</ul>
 </header>
 <main>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<h1>About me </h1>
 
-	<img src="#" />	
+	<img src="img/IMG_0081.JPG" width="30%" height="30%">
 
-	<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
+	<p>I am a UX designer currently working at <a href="www.practicefusion.com">Practice Fusion</a> in San Francisco. I have been designing for healthcare for the past 4 years and love translating difficult paper-based workflows into seamless software experiences. I currently work closely with product managemenet, engineering, and other designers to design product features from ideation to implementation.</p>
+
+
+	<p>Evenings, weekends, and vacation you'll find me perusing record bins, tinkering with synthesizers, or on hiking trails with the family. I enjoy making people laugh and a pint of guinness every now and then.</p>
 
 
 </main>
