--- a/resume/about-me.html
+++ b/resume/about-me.html
@@ -8,25 +8,49 @@
 <body>
 
 <header>
-	<p class="title">Killian Escobedo</p>
+	<p class="title">killian escobedo</p>
 
+</header>
+
+<div class="navigation">
 	<ul>
 		<li><a href="about-me.html">About me</a></li>
 		<li><a href="resume-ke.html">Resume</a></li>
 	</ul>
-</header>
-<main>
+</div>
+<div class="aboutme-content">
 	<h1>About me </h1>
 
 	<img src="img/IMG_0081.JPG" width="30%" height="30%">
 
-	<p>I am a UX designer currently working at <a href="www.practicefusion.com">Practice Fusion</a> in San Francisco. I have been designing for healthcare for the past 4 years and love translating difficult paper-based workflows into seamless software experiences. I currently work closely with product managemenet, engineering, and other designers to design product features from ideation to implementation.</p>
+	<p>I am a UX designer currently working at Practice Fusion in San Francisco. I have been designing for healthcare for the past 4 years and love translating difficult paper-based workflows into seamless software experiences. I currently work closely with product managemenet, engineering, and other designers to design product features from ideation to implementation.</p>
+
+	<p>During my tenure at Practice Fusion I've designed an array of projects and features, including: </p>
+
+	<ul>
+		<li>Charting features for doctors</li>
+		<li>Ordering flows for medical staff</li>
+		<li>Setup and onbaording experiences for new users</li>
+		<li>Marketing pages and sign up flows</li>
+	</ul>
+
+	<p>I want to continue to design for enterprise level solutions that help businesses and users excel at their day to day jobs. My domain expertise is in healthcare and legal, but I'm open to opportunities in other industries.</p>
 
 
-	<p>Evenings, weekends, and vacation you'll find me perusing record bins, tinkering with synthesizers, or on hiking trails with the family. I enjoy making people laugh and a pint of guinness every now and then.</p>
+	<p>Evenings, weekends, and vacation you'll find me perusing record bins, tinkering with synthesizers, or on hiking trails with the family. I enjoy making people laugh and a pint of guinness (or 4). Summer is my favorite season and pizza is my pasta is my favorite food.</p>
+</div>
 
-
-</main>
+<footer>
+	<div class="social-links">
+		<ul>
+			<li><a href="https://www.linkedin.com/in/killian-escobedo-606377b
+">LinkedIn</a></li>
+			<li><a href="https://www.instagram.com/morepunx/">Instagram</a></li>
+			<li><a href="https://www.facebook.com/killianescobedo">facebook</a></li>
+			<li><a href="https://twitter.com/killianescobedo">Twitter</a></li>
+		</ul>
+	</div>
+</footer>
 
 
 </body>
