--- a/resume/resume-ke.html
+++ b/resume/resume-ke.html
@@ -8,22 +8,22 @@
 <body>
 
 <header>
-	<p class="title">Killian Escobedo</p>
-
+	<p class="title">killian escobedo</p>
+</header>
+<div class="navigation">
 	<ul>
 		<li><a href="about-me.html">About me</a></li>
-		<li><a href="#">Resume</a></li>
+		<li><a href="resume-ke.html">Resume</a></li>
 	</ul>
-</header>
+</div>
 
-<main>
-
-
+<div class="resume-title">
 	<h1>Resume</h1>
+</div>
 
-	<div class="experience">
-		<h2>Experience</h2>
-
+<div class="resume-content">		
+		<div class="experience">
+			<h2>Experience</h2>
 			<h3>Practice Fusion | <span class="role-format">Senior UX designer </span> | <span class="date-format">June 2012 - Present</span></h3>
 			<ul>
 				<li>Designed and delivered mockups of revenue-generating features for an Electronic Health Records system used by over 100,000 users.</li>
@@ -36,6 +36,8 @@
 
 				<li>Contribute to design team style guide, pattern library, and copy guidelines.</li>
 			</ul>
+	
+
 
 			<h3>Smithsonian Institution Archives |  <span class="role-format">Intern</span> | <span class="date-format">May 2011 - July 2011</span></h3>
 
@@ -44,7 +46,9 @@
 
 				<li>Conducted exploratory data analysis on over 10,000 multimedia files to identify file type and characteristics affecting long-term preservation of files.</li>
 			</ul>
+	
 
+		
 			<h3>Wendel Rosen Black and Dean | <span class="role-format">Paralegal</span> | <span class="date-format"> January 2006 - August 2010</span></h3>
 
 				<ul>
@@ -52,30 +56,10 @@
 					<li>Assisted attorneys, paralegals and IT team in developing strategies for managing large electronic document repositories</li>
 					<li>Proposed and executed protocols for compiling metadata for electronic documents and scanned images for identification and retrieval purposes</li>
 				</ul>
-	</div>
-
-	<div class="skills">
-		<h2>Skills</h2>
-		<h3>Programming</h3>
-		<ul>
-			<li>html/css</li>
-			<li>Javascript</li>
-		</ul>
-
-		<h3>UX methods</h3>
-		<ul>
-			<li>Prototyping</li>
-			<li>Personas/scenarios</li>
-			<li>User journeys</li>
-			<li>Wireframing</li>
-			<li>High fidelity mockups</li>
-		</ul>
-	</div>
-
+		</div>
 
 	<div class="education">
 		<h2>Education</h2>
-
 		<h3>University of Michigan - Ann Arbor</h3>
 		<ul>
 			<li>Master of Science in Information - Human-Computer Interaction</li>
@@ -87,14 +71,16 @@
 			<li>Bachelor of Arts - History</li>
 		</ul>
 	</div>
-</main>
+</div>
 
 <footer>
 	<div class="social-links">
 		<ul>
-			<li><a href="#">LinkedIn</a></li>
-			<li><a href="#">Instagram</a></li>
-			<li><a href="#">facebook</a></li>
+			<li><a href="https://www.linkedin.com/in/killian-escobedo-606377b
+">LinkedIn</a></li>
+			<li><a href="https://www.instagram.com/morepunx/">Instagram</a></li>
+			<li><a href="https://www.facebook.com/killianescobedo">facebook</a></li>
+			<li><a href="https://twitter.com/killianescobedo">Twitter</a></li>
 		</ul>
 	</div>
 </footer>
