--- a/resume/about-me.html
+++ b/resume/about-me.html
@@ -19,10 +19,14 @@
 	</ul>
 </div>
 <div class="aboutme-content">
+
+
 	<h1>About me </h1>
 
 	<img src="img/IMG_0081.JPG" width="30%" height="30%">
 
+	<div class="workstuff">
+	<h2>Work stuff</h2>
 	<p>I am a UX designer currently working at Practice Fusion in San Francisco. I have been designing for healthcare for the past 4 years and love translating difficult paper-based workflows into seamless software experiences. I currently work closely with product managemenet, engineering, and other designers to design product features from ideation to implementation.</p>
 
 	<p>During my tenure at Practice Fusion I've designed an array of projects and features, including: </p>
@@ -35,9 +39,16 @@
 	</ul>
 
 	<p>I want to continue to design for enterprise level solutions that help businesses and users excel at their day to day jobs. My domain expertise is in healthcare and legal, but I'm open to opportunities in other industries.</p>
+	</div>
 
-
+	<div class="funstuff">
+	<h2>Fun stuff</h2>
 	<p>Evenings, weekends, and vacation you'll find me perusing record bins, tinkering with synthesizers, or on hiking trails with the family. I enjoy making people laugh and a pint of guinness (or 4). Summer is my favorite season and pizza is my pasta is my favorite food.</p>
+	</div>
+
+
+
+
 </div>
 
 <footer>
