more updates to about me page

--- a/resume/about-me.html
+++ b/resume/about-me.html
@@ -18,35 +18,36 @@
 		<li><a href="resume-ke.html">Resume</a></li>
 	</ul>
 </div>
-<div class="aboutme-content">
 
-
+<div class="aboutme-title">	
 	<h1>About me </h1>
+</div>
 
-	<img src="img/IMG_0081.JPG" width="30%" height="30%">
-
+<div class="aboutme-content">
 	<div class="workstuff">
-	<h2>Work stuff</h2>
-	<p>I am a UX designer currently working at Practice Fusion in San Francisco. I have been designing for healthcare for the past 4 years and love translating difficult paper-based workflows into seamless software experiences. I currently work closely with product managemenet, engineering, and other designers to design product features from ideation to implementation.</p>
+		<h2>Work stuff</h2>
+		<p>I am a UX designer currently working at Practice Fusion in San Francisco. I have been designing for healthcare for the past 4 years and love translating difficult paper-based workflows into seamless software experiences. I currently work closely with product managemenet, engineering, and other designers to design product features from ideation to implementation.</p>
 
-	<p>During my tenure at Practice Fusion I've designed an array of projects and features, including: </p>
+		<p>During my tenure at Practice Fusion I've designed an array of projects and features, including: </p>
 
-	<ul>
-		<li>Charting features for doctors</li>
-		<li>Ordering flows for medical staff</li>
-		<li>Setup and onbaording experiences for new users</li>
-		<li>Marketing pages and sign up flows</li>
-	</ul>
+		<ul>
+			<li>Charting features for doctors</li>
+			<li>Ordering flows for medical staff</li>
+			<li>Setup and onbaording experiences for new users</li>
+			<li>Marketing pages and sign up flows</li>
+		</ul>
 
-	<p>I want to continue to design for enterprise level solutions that help businesses and users excel at their day to day jobs. My domain expertise is in healthcare and legal, but I'm open to opportunities in other industries.</p>
+		<p>I want to continue to design for enterprise level solutions that help businesses and users excel at their day to day jobs. My domain expertise is in healthcare and legal, but I'm open to opportunities in other industries.</p>
 	</div>
 
 	<div class="funstuff">
-	<h2>Fun stuff</h2>
-	<p>Evenings, weekends, and vacation you'll find me perusing record bins, tinkering with synthesizers, or on hiking trails with the family. I enjoy making people laugh and a pint of guinness (or 4). Summer is my favorite season and pizza is my pasta is my favorite food.</p>
+		<h2>Fun stuff</h2>
+		<p>Evenings, weekends, and vacation you'll find me perusing record bins, tinkering with synthesizers, or on hiking trails with the family. I enjoy making people laugh and a pint of guinness (or 4). Summer is my favorite season and pizza is my pasta is my favorite food.</p>
 	</div>
 
-
+	<div class="profile-image">
+		<img src="img/IMG_0081.JPG" />
+	</div>
 
 
 </div>
