Updates to landing page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 	<h2>Homework</h2>	
 		<ul>	
 			<li><a href="cookie-recipe/cookie-recipe.html"> Cookie recipe</li>
-			<li><a href="resume/about-me.html">Resume/about me</a></li>
+			<li><a href="resume/about-me.html">Resume and about me</a></li>
+			<li><a href="cookie-columns/cookie-columns.html">Cookie recipe with better layout</a></li>
 		</ul>
 	</div>
 	<div class="code-alongs">
