--- a/cookie-columns/cookie-columns.html
+++ b/cookie-columns/cookie-columns.html
@@ -13,8 +13,15 @@
 <div class="content">
 
 <h1>The Best Chocolate Chip Cookies</h1>
-<p>Recipe by: Bonnie Owens</p>
-<img src="img/cookies.jpg" alt="Mouth watering cooking close-up" />
+<p class="author">Recipe by: Bonnie Owens</p>
+<div class="image">
+	<img src="img/cookies.jpg" alt="Mouth watering cooking close-up" />
+	<div class="i-icon">
+	<p>i</p>
+</div>
+
+	
+</div>
 
 <div class="prep-time">
 <section class="column1">
@@ -76,7 +83,6 @@
 	</ul>
 
 	<h2>EXPERT TIPS</h2>
-
 	<p>Use an ice-cream scoop to make perfectly shaped cookies. Level off the dough on the edge of the bowl for perfectly round cookies.If you didn't think these cookies could get any better, think again! Get creative! Instead of the 2 cups semisweet chocolate chips, make with 1/2 cup each of semisweet chocolate chips, peanut butter chips, or butterscotch chips. OMG these are good!
 	</p> 
 
@@ -85,10 +91,9 @@
 	</p>
 
 	<h2>NUTRITION INFORMATION</h2>
-
 	<p>Probably bad for you, but who cares. MMMMMM COOKIES!!!! nom nom nom</p>
 
-	<p>This recipe was altered from Open Source Recipe <a href="http://www.opensourcefood.com/people/Amanori/recipes/mamas-recipe-the-best-chocolate-chip-cookies">for more recipes go here.</a>
+	<p>This recipe was altered from <a href="http://www.opensourcefood.com/people/Amanori/recipes/mamas-recipe-the-best-chocolate-chip-cookies">Open Source Recipe. </a>
 	</p>
 </div>
 
