--- a/cookie-columns/cookie-columns.html
+++ b/cookie-columns/cookie-columns.html
@@ -14,14 +14,17 @@
 
 <h1>The Best Chocolate Chip Cookies</h1>
 <p class="author">Recipe by: Bonnie Owens</p>
-<div class="image">
-	<img src="img/cookies.jpg" alt="Mouth watering cooking close-up" />
-	<div class="i-icon">
-	<p>i</p>
+
+<div class="image-wrapper">
+		<p class="i-icon">i</p>	
+		<img src="img/cookies.jpg" alt="Mouth watering cooking close-up" />
 </div>
+	
 
 	
-</div>
+		
+	
+
 
 <div class="prep-time">
 <section class="column1">
