Make the icon a link

--- a/cookie-columns/cookie-columns.html
+++ b/cookie-columns/cookie-columns.html
@@ -16,7 +16,7 @@
 <p class="author">Recipe by: Bonnie Owens</p>
 
 <div class="image-wrapper">
-		<p class="i-icon">i</p>	
+		<a href="#"><p class="i-icon">i</p></a>
 		<img src="img/cookies.jpg" alt="Mouth watering cooking close-up" />
 </div>
 	
