Updates to startup and fashionblog homework

--- a/font-awesome/Startup Matchmaker.html
+++ b/font-awesome/Startup Matchmaker.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
-<head>
+<!-- saved from url=(0062)file:///Users/kescobedo/Documents/fewd-44/startup/startup.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Startup Matchmaker</title>
-	<meta charset="utf-8">
-	<link rel="stylesheet" href="css/startup.css">
+	
+	<link rel="stylesheet" href="./Startup Matchmaker_files/startup.css">
 </head>
 <body>
 <header>
@@ -17,14 +17,14 @@
 	</ul>
 </header>
 
-<p class="banner">Because two brains <span class="gray-strikethrough">taste</span> <span class="text-underline">are</span> better than one.</p>
+<p class="banner">Because two brains taste are better than one.</p>
 
 <div class="hero">
-	<img src="img/coworking.jpg">
+	<img src="./Startup Matchmaker_files/coworking.jpg">
 	<div class="cta">
 		<h2>Meet your match!</h2>
 		<p>Have a great idea for a product, but need help making it a reality? We're here to help. Start up matchmaker is the best place for designers and developers to find each other</p>
-		<a href="#">Create a profile</a>
+		<a href="file:///Users/kescobedo/Documents/fewd-44/startup/startup.html#">Create a profile</a>
 	</div>
 
 </div>
@@ -34,19 +34,19 @@
 	<div>
 		<h2>Create a profile</h2>
 		<p> Are you a Designer? Developer? Put yourself out there so that others can find you.</p>
-		<a href="#">Sign up now</a>
+		<a href="file:///Users/kescobedo/Documents/fewd-44/startup/startup.html#">Sign up now</a>
 	</div>
 
-	<div class="middle-block">
+	<div>
 		<h2>Find a developer</h2>
 		<p>Looking for a fantastic developer to work with on the next big thing? Look no further.</p>
-		<a href="#">Start your search</a>
+		<a href="file:///Users/kescobedo/Documents/fewd-44/startup/startup.html#">Start your search</a>
 	</div>
 
 	<div>
 		<h2>Find a designer</h2>
 		<p>Need someone who can make a product intuitive and appealing? Get ready.</p>
-		<a href="#">Start your search</a>
+		<a href="file:///Users/kescobedo/Documents/fewd-44/startup/startup.html#">Start your search</a>
 	</div>
 </div>
 
@@ -54,5 +54,5 @@
 	<p>(C) 2013 Startup Matchmaker. Made in NY.</p>
 </footer>
 
-</body>
-</html>
+
+</body></html>
