--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			<li><a href="cookie-recipe/cookie-recipe.html"> Cookie recipe</li>
 			<li><a href="resume/about-me.html">Resume and about me</a></li>
 			<li><a href="cookie-columns/cookie-columns.html">Cookie recipe with better layout</a></li>
+			<li><a href="fashion-blog/fashion-blog.html">Fashion-blog</a></li>
 		</ul>
 	</div>
 	<div class="code-alongs">
