--- a/fashion-blog/fashion-blog.html
+++ b/fashion-blog/fashion-blog.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/fashion-blog.css">
-	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato:300,700,300italic,700italic" />
 </head>
 <body>
 
