Updates to start up

--- a/startup/startup.html
+++ b/startup/startup.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+	<!DOCTYPE html>
 <html>
 <head>
 	<title>Startup Matchmaker</title>
@@ -34,19 +34,19 @@
 	<div>
 		<h2>Create a profile</h2>
 		<p> Are you a Designer? Developer? Put yourself out there so that others can find you.</p>
-		<a href="#">Sign up now</a>
+		<a class="content-block-button" href="#">Sign up now</a>
 	</div>
 
 	<div class="middle-block">
 		<h2>Find a developer</h2>
 		<p>Looking for a fantastic developer to work with on the next big thing? Look no further.</p>
-		<a href="#">Start your search</a>
+		<a class="content-block-button" href="#">Start your search</a>
 	</div>
 
 	<div>
 		<h2>Find a designer</h2>
 		<p>Need someone who can make a product intuitive and appealing? Get ready.</p>
-		<a href="#">Start your search</a>
+		<a class="content-block-button" href="#">Start your search</a>
 	</div>
 </div>
 
