--- a/fashion-blog/fashion-blog.html
+++ b/fashion-blog/fashion-blog.html
@@ -15,12 +15,12 @@
 		<h2>Better-Dressed People</h2>
 
 		<ul class="navigation">
-			<li>Women’s</li>
-			<li>Men’s</li>
-			<li>On the Street</li>
-			<li>The Catwalk</li>
-			<li>AdWatch</li>
-			<li>About</li>
+			<li><a href="#">Women’s</a></li>
+			<li><a href="#">Men’s</a></li>
+			<li><a href="#">On the Street</a></li>
+			<li><a href="#">The Catwalk</a></li>
+			<li><a href="#">AdWatch</a></li>
+			<li><a href="#">About</a></li>
 		</ul>
 
 	</header>
@@ -51,14 +51,14 @@
 
 	<footer>
 		<ul class="footer-navigation">
-			<li>Home</li>
-			<li>Women's</li>
-			<li>Men's</li>
-			<li>On the Street</li>
-			<li>The Catwalk</li>
-			<li>AdWatch</li>
-			<li>About</li>
-			<li>Tips</li>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">Women's</a></li>
+			<li><a href="#">Men's</a></li>
+			<li><a href="#">On the Street</a></li>
+			<li><a href="#">The Catwalk</a></li>
+			<li><a href="#">AdWatch</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Tips</a></li>
 		</ul>
 		<p class="copyright">© 2013 Valet Industries, Inc.</p>
 	</footer>
