fashion-blog-advanced commit

--- a/code-along/compare.html
+++ b/code-along/compare.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+<div class="page-container">
+
 	<h1>Compare Two Numbers</h1>
 
 	<section>
@@ -21,8 +23,9 @@
 	</section>
 
 	<button class="compare">Compare</button>
+</div>
 
-	<script src="js/compare.js"></script>
+<script src="js/compare.js"></script>
 
 </body>
 </body>
