Updates to fashion blog

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<li><a href="resume/about-me.html">Resume and about me</a></li>
 			<li><a href="cookie-columns/cookie-columns.html">Cookie recipe with better layout</a></li>
 			<li><a href="fashion-blog/fashion-blog.html">Fashion blog</a></li>
+			<li><a href="fashion-blog-advanced/fashion-blog-advanced.html">Fashion blog advanced</a></li>
 		</ul>
 	</div>
 	<div class="code-alongs">
