updates to temp converter homework

--- a/temperature-converter/temp-converter.html
+++ b/temperature-converter/temp-converter.html
@@ -13,15 +13,17 @@
 	<main>
 		<div class="farenheit">
 			<p>Farenheit</p>
-			<input type="text" name="farenheit">
-			<button>Convert</button>
+			<input class="farenheit-value" type="text" name="farenheit">
+			<button class="convert-farenheit">Convert</button>
 		</div>
 		<div class="celsius">
 			<p>Celsius</p>
-			<input type="text" name="celsius">
-			<button>Convert</button>
+			<input class="celsius-value" type="text" name="celsius">
+			<button class="convert-celsius">Convert</button>
 		</div>
 	</main>
+
+	<script type="text/javascript" src="js/temp-converter.js"></script>
 
 </body>
 </html>
