--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			<li><a href="cookie-columns/cookie-columns.html">Cookie recipe with better layout</a></li>
 			<li><a href="fashion-blog/fashion-blog.html">Fashion blog</a></li>
 			<li><a href="fashion-blog-advanced/fashion-blog-advanced.html">Fashion blog advanced</a></li>
+			<li><a href="temperature-converter/temperature-converter.html">Temperature converter</a></li>
 		</ul>
 	</div>
 	<div class="code-alongs">
