Code along and updates to temp converter

--- a/temperature-converter/temp-converter.html
+++ b/temperature-converter/temp-converter.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
 	<title>Temperature converter</title>
+
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no">
+	
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/temp-converter.css">
 
