--- a/homework/cash-register/cash-register.html
+++ b/homework/cash-register/cash-register.html
@@ -1,1 +1,34 @@
-cash-register.html
+	<!DOCTYPE html>
+<html>
+<head>
+	<title>Cash Register</title>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/cash-register.css">
+</head>
+<body>
+
+<div class="register">
+	<div class="ticket">
+		<h1>Fewd Sushi</h1>
+
+		<ul class="entries">
+			<li>$8.99</li>
+			<li>$3.99</li>
+		</ul>
+		<footer>
+			<p>Total</p>
+			<p class="total">
+			$50.00
+			</p>
+		</footer>
+	</div>
+	<form>
+		<input class="item" placeholder="Item cost">
+	</form>
+</div>
+
+<script src="js/cash-register.js"></script>
+
+</body>
+</html>
