Updates to register home work

--- a/homework/cash-register/cash-register.html
+++ b/homework/cash-register/cash-register.html
@@ -11,20 +11,19 @@
 <div class="register">
 	<div class="ticket">
 		<h1>Fewd Sushi</h1>
-
-		<ul class="entries">
-			<li>$8.99</li>
-			<li>$3.99</li>
-		</ul>
+			<ul class="entries">
+		
+			</ul>
 		<footer>
 			<p>Total</p>
 			<p class="total">
-			$50.00
+			$0.00
 			</p>
 		</footer>
 	</div>
 	<form>
 		<input class="item" placeholder="Item cost">
+		<button type="submit">Add item</button>
 	</form>
 </div>
 
