--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
 	<div class="homework">
 	<h2>Homework</h2>	
 		<ul>	
-			<li><a href="cookie-recipe/cookie-recipe.html"> Cookie recipe</li>
-			<li><a href="resume/about-me.html">Resume and about me</a></li>
-			<li><a href="cookie-columns/cookie-columns.html">Cookie recipe with better layout</a></li>
-			<li><a href="fashion-blog/fashion-blog.html">Fashion blog</a></li>
-			<li><a href="fashion-blog-advanced/fashion-blog-advanced.html">Fashion blog advanced</a></li>
-			<li><a href="temperature-converter/temp-converter.html">Temperature converter</a></li>
+			<li><a href="homework/cookie-recipe/cookie-recipe.html"> Cookie recipe</li>
+			<li><a href="homework/resume/about-me.html">Resume and about me</a></li>
+			<li><a href="homework/cookie-columns/cookie-columns.html">Cookie recipe with better layout</a></li>
+			<li><a href="homework/fashion-blog/fashion-blog.html">Fashion blog</a></li>
+			<li><a href="homework/fashion-blog-advanced/fashion-blog-advanced.html">Fashion blog advanced</a></li>
+			<li><a href="homework/temperature-converter/temp-converter.html">Temperature converter</a></li>
+			<li><a href="homework/cash-register.html">Cash register</a></li>
 		</ul>
 	</div>
 	<div class="code-alongs">
