updates to task homework

--- a/homework/tasks/tasks.html
+++ b/homework/tasks/tasks.html
@@ -10,7 +10,9 @@
 	<div class="page-container">
 		<p class="title">Make a task list</p>
 		<form>
-			<label for="task-name">Add your task</label><input class="task-name" type="text">
+			<label for="task-name">Task</label><input class="task-name" type="text">
+
+			<label for="date">Due date</label>
 			<input class="date" type="date">
 			<button class="button" type="submit">Add task</button>
 		</form>
