--- a/homework/tasks/tasks.html
+++ b/homework/tasks/tasks.html
@@ -10,10 +10,16 @@
 	<div class="page-container">
 		<p class="title">Make a task list</p>
 		<form>
-			<label for="task-name">Task</label><input class="task-name" type="text">
+			<div class="task-div">
+				<label for="task-name">Task</label>
+				<input class="task-name" type="text">
+			</div>
 
-			<label for="date">Due date</label>
-			<input class="date" type="date">
+			<div class="date-div">
+				<label for="date">Due date</label>
+				<input class="date" type="date">
+			</div>
+				
 			<button class="button" type="submit">Add task</button>
 		</form>
 
