update index page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 			<li><a href="homework/fashion-blog-advanced/fashion-blog-advanced.html">Fashion blog advanced</a></li>
 			<li><a href="homework/temperature-converter/temp-converter.html">Temperature converter</a></li>
 			<li><a href="homework/cash-register/cash-register.html">Cash register</a></li>
+			<li><a href="homework/tasks/tasks.html">To do list</a></li>
 		</ul>
 	</div>
 	<div class="code-alongs">
