--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 			<li>Travel news</li>
 			<li>Wendy's Resume</li>
 			<li>layout</li>
+			<li><a href="stoplight/stoplight.html">Stop light</a></li>
 		</ul>
 	</div>
 
