--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<li>Travel news</li>
 			<li>Wendy's Resume</li>
 			<li>layout</li>
-			<li><a href="stoplight/stoplight.html">Stop light</a></li>
+			<li><a href="code-along/stoplight/stoplight.html">Stop light</a></li>
 		</ul>
 	</div>
 
