so much to update

--- a/code-along/wendy-bite-starter/about-me.html
+++ b/code-along/wendy-bite-starter/about-me.html
@@ -35,6 +35,10 @@
 	</ul>
 </footer>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/TweenMax.min.js"></script>
+<script src="js/wendy.js"></script>
+
+
 </body>
 </html>
 
