--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 			<li><a href="homework/temperature-converter/temp-converter.html">Temperature converter</a></li>
 			<li><a href="homework/cash-register/cash-register.html">Cash register</a></li>
 			<li><a href="homework/tasks/tasks.html">To do list</a></li>
+			<li><a href="final/friend-or-foe.html">Final</a></li>
 		</ul>
 	</div>
 	<div class="code-alongs">
